<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".app.ContentActivity"
    android:orientation="vertical"
    tools:showIn="@layout/activity_content">

    <android.support.v4.view.ViewPager
        android:id="@+id/contentPager"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottombar_height"
        app:layout_constraintTop_toBottomOf="@id/contentPager"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_content_found"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableTop="@mipmap/ic_found_select"
            android:textColor="@color/button_selected"
            android:text="@string/bottombar_home"
            android:background="@null"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_content_ranking"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/bottombar_msg"
            android:textColor="@color/button_deselected"
            android:drawableTop="@mipmap/ic_ranking_deselected"
            android:background="@null"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_content_follow"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/bottombar_follow"
            android:textColor="@color/button_deselected"
            android:drawableTop="@mipmap/ic_follow_deselected"
            android:background="@null"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_content_user"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/bottombar_fresh"
            android:textColor="@color/button_deselected"
            android:drawableTop="@mipmap/ic_fresh_deselected"
            android:background="@null"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_content_fresh"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/bottombar_user"
            android:textColor="@color/button_deselected"
            android:drawableTop="@mipmap/ic_user_deselected"
            android:background="@null"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>